--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,21 @@
 /* IMPOSTAZIONI GENERALI */
 
 body {
-    font:('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&display=swap'); optional;
-  background-image: url(/assets/img/sfondo.png)
-      padding: 20px
+  @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&display=swap");
+  padding: 20px;
 }
 /* HEADER */
+img {
+  width: 250px;
+}
+.logomenu {
+  text-align: center;
+  width: auto;
+  background-color: #017188;
+}
+.title {
+  padding: 10px;
+}
 
 /* MAIN */
 
