--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,74 @@
 /* IMPOSTAZIONI GENERALI */
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 body {
-  @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&display=swap");
+  font-family: "Poppins", sans-serif;
+  background-image: url(/assets/img/sfondo.png);
+  background-repeat: repeat;
   padding: 20px;
 }
 /* HEADER */
 img {
   width: 250px;
+  margin-top: 20px;
 }
 .logomenu {
   text-align: center;
+  color: white;
   width: auto;
   background-color: #017188;
+  box-shadow: 2px 2px 10px black;
+  background: linear-gradient(
+    180deg,
+    rgba(3, 213, 255, 1) 0%,
+    rgba(32, 122, 140, 1) 50%,
+    rgba(2, 67, 82, 1) 100%
+  );
 }
 .title {
+  font-size: large;
   padding: 10px;
+}
+.menulist {
+  font-size: 1.5em;
+}
+li {
+  padding-bottom: 1em;
 }
 
 /* MAIN */
+main {
+  background-color: white;
+  box-sizing: border-box;
+  padding: 20px;
+  margin-top: 20px;
+  box-shadow: 2px 2px 10px black;
+}
 
 /* ELEMENTI NEL MAIN - ARTICLE */
+h2 {
+  font-size: 2em;
+}
+.autor {
+  color: gray;
+}
+p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
 /* TABELLE */
-
+ul {
+  list-style: disc;
+}
+ol {
+  list-style: decimal;
+}
 /* FORM */
 
 /* ELEMENTI NELL' ASIDE */
 
 /* FOOTER */
+footer {
+  background-color: white;
+  box-shadow: 2px 2px 10px black;
+}
